--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
               <li class="prev">&#10094;</li>
               <li class="next">&#10095;</li>
-              <li>Dezember<br><span style="font-size:18px">2024</span></li>
+              <li>Jänner<br><span style="font-size:18px">2025</span></li>
             </ul>
           </div>
           
