--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="Aufgaben" class="tabcontent">
         <input id="myToDo" placeholder="Aufgabe" type="text">
-        <button class="button button1" onclick="addTask()">Aufgabe anlegen</button>
+        <button class="button button1" onclick="addTask()">Anlegen</button>
         <hr style="color:black;height:2px;background-color: black;">
         <div id="myTask">
         </div>
@@ -28,7 +28,7 @@
             <ul>
               <li class="prev">&#10094;</li>
               <li class="next">&#10095;</li>
-              <li>Jänner<br><span style="font-size:18px">2025</span></li>
+              <li>Dezember<br><span style="font-size:18px">2024</span></li>
             </ul>
           </div>
           
